# VNDManuf

./: .cursorrules  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ASSEMBLY_SHOPIFY_COMPLETE.md  Delivery_Docket.docx  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_ASSEMBLY_QUALITY.md  MIGRATION_COMPLETE.md  Makefile  POST_MIGRATION_VERIFICATION_COMPLETE.md  PRODUCT_UI_ASSEMBLIES_COMPLETE.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_FOR_CHATGPT.md  README_ADDENDUM_ASSEMBLIES_SHOPIFY.md  UNIFIED_PRODUCTS_COMPLETE.md  Untitled-1.py  VALIDATION_REPORT.md  XERO_DISABLED.md  XERO_INTEGRATION_COMPLETE.md  Xero.txt  alembic.ini  brief.md  check_assemblies.py  check_assembly_lines.py  check_db.py  check_indexes.py  check_migration.py  check_revisions.py  check_schema.py  check_schema_dump.py  check_table.py  competitor_schema_dump.sql  env.example  nova_u_gap_analysis.md  nova_u_generated_articles.json  (+12 more)
app/: __init__.py  error_handlers.py  logging_config.py  settings.py
assets/: crm_calendar.css  crm_calendar_dblclick.js  crm_dictate.js  nu_editor.js  nu_training.css  sales_order_modals.css  vnd_main_tabs.css
config/: openai.json.example
data/: chatgpt_customer_locations.csv  prospects_vic.json  prospects_vic_geocoded.json
db/: alembic.ini
docs/: API_UPDATES_COMPLETE.md  ASSEMBLY_SHOPIFY_INTEGRATION.md  BUILD_COMPLETE_SUMMARY.md  COSTING_GUIDE.md  CURRENT_BUILD_STATUS.md  DASH_UI_CRUD_COMPLETE.md  How to manually do git.txt  MAIL_MERGE_IMPLEMENTATION_PLAN.md  MAIL_MERGE_TEMPLATE_CHECKLIST.md  api_summary.md  (+26 more)
(+953 files in other folders)
